add recharging option

--- a/doc/taxonomy.tex
+++ b/doc/taxonomy.tex
@@ -98,8 +98,10 @@ Routing applications in logistics come in a rich panel of variations. Where poss
 \item {\bf  request-cover-mode:} a request can be mandatory, or  optional with a price reward for covering it;
 \item {\bf mixing single-commodity and multi-commodity mode: } In the single commodity, the goods that are transported are undistinguishable. So a delivery can be done from any pickup point.  When the requests are only of one type: either all are pickups or all are deliveries; then the problem should be understood as a single commodity problem, are there is no need to distinguish the goods. A multi-commodity model is required in the presence of  "Pickup and Delivery" requests. The latter is associated with a  specific pickup point and to a specific delivery point. 
 When some goods are replaceable by others, then the associated delivery (resp. pickup) can have a choice of pickup (resp. delivery) points. So a complex request may be defined that involves several alternative pickup-point and/or several alternative delivery points. This complexity can make specific sense along with the split quantity option. In particular, in the multi depot case, goods can typically be delivered from (resp. delivered to) several of them. Our shipment-request model allows us to mix single-commodity and multi-commodity types. 
-\item {\bf  service-times:} we distinguish access time and pickup or delivery points, setup time and set-down time, the sum making up the service time.
+\item {\bf  service-times:} we distinguish access time and pickup or delivery points, pickup time and delivery time, the sum making up the service time.
 \item {\bf multiple compartments} in the vehicle (single compartment being a special case), with loading mode option. For instance, one can model a restriction of one request per compartment for liquid transportation; then, the request can be accommodated only if the compartment capacity is larger than the request capacity requirement. Or a vehicle can have a trailer; then both the vehicle and the trailer have a maximum weight capacity, while each request has its own weight. 
+\item {\bf Rechargeable vehicle} at recharging station (we assume a linear recharging rate).
+
 \end{itemize}
 
 \noindent 
